# ZC128

./: .gitignore  LICENSE  README.md  test.cpp
include/: ALU_LG.h  Cache.h  InstructionSet.h  Memory.h  core.h  executor.h  pc.h  system.h  thread.h
sim/: CMakeLists.txt  test.cpp
sim/include/: InstructionSet.h  Memory.h  RF.h
sim/src/: core.cpp  thread.cpp
src/: ALU_LG.cpp  Cache.cpp  InstructionSet.cpp  Memory.cpp  RF.cpp  executor.cpp  pc.cpp  system.cpp
